<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="hello">Hello World, NewsReaderActivity!</string>
    <string name="app_name">NewsReader</string>
    <string name="recommendation_item_tag">recommendation</string>
    <string name="recommendation_navigation_item">精品推荐</string>
    <string name="my_game_item_tag">my_game</string>
    <string name="my_game_navigation_item">我的游戏</string>
    <string name="rank_item_tag">rank</string>
    <string name="rank_navigation_item">排行榜</string>
    <string name="all_games_item_tag">all_game</string>
    <string name="all_games_navigation_item">所有游戏</string>
    <string-array name="recommendation_sub_nav_item">
        <item>免费</item>
        <item>付费</item>
    </string-array>
    <string-array name="recommendation_sub_nav_item_free_values">
        <item>所有类型</item>
        <item>射击类</item>
        <item>角色扮演</item>
        <item>跑酷</item>
        <item>腾讯</item>
    </string-array>
    <string-array name="all_game_nav_item_list_values">
        <item>免费</item>
        <item>付费</item>
        <item>A-Z排列</item>
    </string-array>
    <string name="game_introduction_text">游戏介绍</string>
    <string name="game_manufacture_text">游戏厂商</string>
    <string name="start_game_text">开始游戏</string>
    <string name="download_game_text">下载游戏</string>
    <string name="user_points_text">您的点数： %1$d 点</string>
    <string name="star_player_title">本周明星玩家</string>
</resources>
