<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tv="http://schemas.android.com/apk/res/com.example.android.tv"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.example.android.tv.navigation.NavItemTwoListView
        android:id="@+id/recommendation_nav_item"
        android:tag="@string/recommendation_item_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_view_layout_height"
        android:gravity="center_vertical"
        tv:expanded_height="@dimen/nav_item_expanded_view_height"
        tv:normal_height="@dimen/nav_item_view_height"
        tv:layout="@layout/nav_item_with_two_list"
        tv:item_name="@string/recommendation_navigation_item"
    />
    <com.example.android.tv.navigation.NavItemTextView
        android:id="@+id/my_game_nav_item"
        android:tag="@string/my_game_item_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_view_layout_height"
        android:gravity="center_vertical"
        tv:expanded_height="@dimen/nav_item_expanded_view_height"
        tv:normal_height="@dimen/nav_item_view_height"
        tv:layout="@layout/nav_item_with_one_list"
        tv:item_name="@string/my_game_navigation_item"
        />
    <com.example.android.tv.navigation.NavItemTwoListView
        android:id="@+id/ranking_list_nav_item"
        android:tag="@string/rank_item_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_view_layout_height"
        tv:expanded_height="@dimen/nav_item_expanded_view_height"
        tv:normal_height="@dimen/nav_item_view_height"
        tv:layout="@layout/nav_item_with_two_list"
        tv:item_name="@string/rank_navigation_item"
        />
    <com.example.android.tv.navigation.NavItemOneListView
        android:id="@+id/all_game_nav_item"
        android:tag="@string/all_games_item_tag"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_view_layout_height"
        android:gravity="center_vertical"
        tv:expanded_height="@dimen/nav_item_expanded_view_height"
        tv:normal_height="@dimen/nav_item_view_height"
        tv:layout="@layout/nav_item_with_one_list"
        tv:item_name="@string/all_games_navigation_item"
        />
</LinearLayout>